# estudio-personal

./: .env.example  .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml
01-evals/: README.md  index.html
01-evals/code/: analisis-errores.py  demo-fallos-silenciosos.py  eval-alto-stake.py  eval-bootstrap.py  eval-costo-pareto.py  eval-golden-dataset.py  eval-harness.py  eval-judge-sesgos.py  eval-metricas-generacion.py  eval-metricas-retrieval.py  eval-online.py  taxonomia-evals.py
01-evals/examples/: anotaciones-errores.jsonl  eval-20260525-ghost_citation.json  eval-20260525-improvement.json  eval-20260525-normal.json  eval-20260525-regression.json  golden-dataset-rag-fiscal.json  resultados-demo-fallos.json
01-evals/theory/: 00-plan.md  01-por-que-evals.md  02-taxonomia.md  03-analisis-errores.md  04-golden-datasets.md  05-metricas-retrieval.md  06-metricas-generacion.md  07-llm-as-judge.md  08-estadistica-estocastica.md  09-regresiones-ci.md  10-costo-pareto.md  11-online-evals.md  12-dominios-alto-stake.md
02-retrieval/: README.md  index.html
02-retrieval/code/: 01-ir-clasico.py  02-embeddings-geometria.py  03-hybrid-rrf.py  04-chunking-estrategias.py  05-query-rewriting.py  06-reranking.py  07-sql-vs-vectores.py  08-benchmark-retrievers.py  09-casos-limite.py  retrieval_lib.py
02-retrieval/examples/: benchmark-retrievers.json  cache-llm.json  cache-rerank.json  golden-retrieval.json
02-retrieval/theory/: 00-plan.md  01-ir-pre-llm.md  02-embeddings-densos.md  03-hybrid-search.md  04-chunking.md  05-query-rewriting.md  06-reranking.md  07-metadata-estructurado.md  08-evaluacion-retrieval.md  (+1 more)
03-produccion/: README.md  index.html
04-economia/: README.md  index.html
blog-drafts/: README.md  index.html
docs/: 01-evals  02-retrieval  03-produccion  04-economia  blog-drafts
search/: search_index.json
shared/: llm_clients.py  utils.py
(+95 files in other folders)
