[project]
name = "estudio-personal"
version = "0.1.0"
description = "Sistema de estudio estructurado en masterclasses sobre IA aplicada a corpus regulatorio chileno"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "openai",
    "python-dotenv",
    "pydantic",
    "matplotlib",
    "numpy",
    "pandas",
    "pytest",
    "rich",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
