[project]
name = "estudio-personal"
version = "0.1.0"
description = "Sistema de estudio estructurado en masterclasses sobre IA aplicada a corpus regulatorio chileno"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "openai",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "matplotlib",
    "numpy",
    "pandas",
    "pytest",
    "rich",
    "fastapi",
    "httpx",
    "uvicorn",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
]
docs = [
    "mkdocs-material>=9.7.6",
    "mkdocs-same-dir>=0.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
